# swagger_server/__main__.py
@@ -7,5 +7,5 @@ from .encoder import JSONEncoder
 if __name__ == '__main__':
     app = connexion.App(__name__, specification_dir='./swagger/')
     app.app.json_encoder = JSONEncoder
-    app.add_api('swagger.yaml', arguments={'title': 'No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)'})
+    app.add_api('swagger.yaml', arguments={'title': 'Twitter Influencer Dashboard'})
     app.run(port=8080)
