# swagger_server/swagger/swagger.yaml
@@ -142,50 +142,4 @@ paths:
           examples:
             application/json: ""
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /influence/hashtags/{handle}/{influencer}:
-    get:
-      summary: "Determine hashtag similarity between users"
-      operationId: "influencetags"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "handle"
-        in: "path"
-        description: "Handle of user to get."
-        required: true
-        type: "string"
-      - name: "influencer"
-        in: "path"
-        description: "Handle of user to examine influence from."
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "200 response"
-          examples:
-            application/json: ""
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /influence/mention/{handle}/{influencer}:
-    get:
-      summary: "Determine mention similarity between users"
-      operationId: "influencetags"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "handle"
-        in: "path"
-        description: "Handle of user to get."
-        required: true
-        type: "string"
-      - name: "influencer"
-        in: "path"
-        description: "Handle of user to examine influence from."
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "200 response"
-          examples:
-            application/json: ""
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
 definitions: {}
